--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,11 +40,6 @@ bind L choose-session
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-# Set the prefix to ^A, like screen
-unbind C-b
-set -g prefix ^A
-bind a send-prefix
-
 # Start numbering windows at 1
 set -g base-index 1
 
@@ -97,26 +92,14 @@ set -g pane-active-border-fg colour214
 # set a 256color $TERM variable so programs inside tmux know they can use 256 colors
 set -g default-terminal screen-256color
 
-# disable mouse mode by default
-# set -g mode-mouse off
-# set -g mouse-resize-pane off
-# set -g mouse-select-pane off
-# set -g mouse-select-window off
-
 # Toggle mouse on with m
 bind m \
-  set -g mode-mouse on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-select-window on \;\
+  set -g mouse on \;\
   display 'Mouse: ON'
 
 # Toggle mouse off with M
 bind M \
-  set -g mode-mouse off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-select-window off \;\
+  set -g mouse off \;\
   display 'Mouse: OFF'
 
 # reload tmux config file with C-a r
@@ -125,13 +108,6 @@ bind r source ~/.tmux.conf
 # Create a new window and prompt for name
 bind N command-prompt "new-window -n '%%' -c '#{pane_current_path}'"
 bind c new-window -c '#{pane_current_path}'
-
-# Rebind prefix to b
-bind B set -g prefix ^b
-bind A set -g prefix ^a
-
-# Works with ~/.ssh/rc to allow re-attaching to tmuxes after ssh reconnect
-# setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
 # set-option -g default-shell /bin/zsh
 set -g default-shell $SHELL 
